--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </main>
 
   <input type="text" id="searchTerms">
-  <a id="searchButton" href="">Search Repositories</a>
+  <button id="searchButton">Search Repositories</button>
 
   <div class="flexbox-container">
     <div>
